--- a/report/kilder.bib
+++ b/report/kilder.bib
@@ -136,6 +136,14 @@ year = {December 2013},
 note ={\url{http://arduino.cc/}}
 }
 
+@MISC{slimFramework,
+author = {Slim Framework},
+title = {Slim Framework's official website},
+howpublished = {Website},
+year = {December 2013},
+note ={\url{http://www.slimframework.com/}}
+}
+
 @MISC{teensyPJRC,
 author = {PJRC},
 title = {Teensy USB Development Board},
