--- a/report/text/ControllerDesign.tex
+++ b/report/text/ControllerDesign.tex
@@ -9,7 +9,7 @@ The design and functionality of the prototype controller will be presented in pa
 The product design section is the vision of the system as a finished product. Figure \ref{fig:Power&Tagdevice} is the illustration of the embedded system called the controller system. The controller system is connected to the server though a Wi-Fi connection to insure that a ethernet outlet don't need to be near every media device. \\ 
 The controller consists of two devices, a detection device and power control device.
 
-\begin{figure}[h]
+\begin{figure}[!h]
 	\centering
 		\includegraphics[width=1.00\textwidth]{images/Power&Tagdevice.png}
 	\caption{Rich picture for Powercontrol and Tag reader}
