--- a/report/text/api.tex
+++ b/report/text/api.tex
@@ -16,8 +16,8 @@ The API started with one clear goal, to be the middleman between the controllers
 \end{figure}
  
 \section{Implementation}
-The API has been implemented on top of the Slim routing framework and PHP. The reason for this framework is that it makes it quicker and easier to make an API, while also making it easy to add additional endpoints. The communication between controllers and the API are done using HTTP and JSON. JSON has been chosen because of its almost universally support and its small overhead. This means that the communication is easy to implement, and easy to port to additional platforms if necessary. Calling the API is as simple as navigating to a website. Parameters to the API is done using custom GET messages. An example of a call to get status could be \texttt{http://example.com/api/api.php/turnOn/123/234} where \texttt{example.com} is the domain where the API is hosted, \texttt{123} is the controller id(cId) and \texttt{234} is the users tag id(tId). An overview of the available calls and their parameters can be seen in \autoref{tbl:apicalls}.
-\fixme{Bedre angivelse om return values er til Arduino eller server?} 
+The API has been implemented on top of the Slim routing framework\citep{slimFramework} and PHP. The reason for this framework is that it makes it quicker and easier to make an API, while also making it easy to add additional endpoints. The communication between controllers and the API are done using HTTP and JSON. JSON has been chosen because of its almost universally support and its small overhead. This means that the communication is easy to implement, and easy to port to additional platforms if necessary. Calling the API is as simple as navigating to a website. Parameters to the API is done using custom GET messages. An example of a call to get status could be \\ \texttt{http://example.com/api/api.php/turnOn/123/234} where \texttt{example.com} is the domain where the API is hosted, \texttt{123} is the controller id(cId) and \texttt{234} is the users tag id(tId). An overview of the available calls and their parameters can be seen in \autoref{tbl:apicalls}.
+%\fixme{Bedre angivelse om return values er til Arduino eller server?} jeg vil mene det er åbentlyst, alt er til return til arduino - tommy
 \begin{table}[!h]
 \begin{tabular}{| l | l | l |}
 \hline
