--- a/report/text/database.tex
+++ b/report/text/database.tex
@@ -112,7 +112,7 @@ However, when updating an action and especially a condition the changes can have
 	\item an existing condition or action is to be updated but with a structural change in the database.
 \end{itemize}
 
-With a structural change it is meant that the name of the condition or action has been changes and this change can influence e.g. whether cond\_timeperiod or cond\_timestamp should be used. As a result it have been decided that in this case the old condition should be deleted and the new be added anew. A structural change should not happen for an action, but the functions are still able to handle it in the same way as a condition.
+With a structural change it is meant that the name of the condition or action has been changes and this change can influence e.g. whether \texttt{cond\_timeperiod} or \texttt{cond\_timestamp} should be used. As a result it have been decided that in this case the old condition should be deleted and the new be added anew. A structural change should not happen for an action, but the functions are still able to handle it in the same way as a condition.
 
 \begin{figure}
 	\centering
