--- a/report/text/futureWork.tex
+++ b/report/text/futureWork.tex
@@ -1,8 +1,13 @@
 \chapter{Future Work}
 In this chapter we discuss some improvement that could be made to the Media-Online Management system.\\
 
-\textbf{Rules}\\
-The rules have been changed during the implementation. Now the web site can only add one rule to one profile, but it should be possible to add a rule or permission to several profiles. On the website a rule can only have one condition and action it would be nice if a web interface at least could support several conditions. Such that a rule like the following to be created: Peter may not watch television from 8:00 to 14:00 and 19:00 to 23:59. However if this change should not happen then the functions working with rules can be simplified. \\
+\textbf{Error's from the test}\\
+In section \vref{sec:resultHE} the results from the system test was explained, these need to be corrected.\\
+ 
+\textbf{Rules and database re-design}\\
+During the final development of the system we really wanted to redesign rules again such that e.g. a true rule can have a start date. After all these change that have been made to the rule and that are to be made then it would be a good idea to redesign a part of the database design. \\
+
+The web site can only add one rule to one profile, but it would be an improvement to make it possible to add a rule or permission to several profiles. On the website a rule can only have one condition and action it would be nice if a web interface at least could support several conditions. Such that a rule like the following to be created: Peter may not watch television from 8:00 to 14:00 and 19:00 to 23:59. However, if this change should not happen then the functions working with rules can be simplified. \\
 
 \textbf{Chores}\\
 It would be nice if the points for doing a chore would be more automatized such that the parents should be less involved. This could be done by a special device where the child could choose a chore and scan his tag, which then register the chore has been made. However, a parent should still approve that the chore has been done by the profile such that the child do not misuse this.\\
